--- a/src/components/SectionFive/SectionFive.css
+++ b/src/components/SectionFive/SectionFive.css
@@ -1,3 +1,10 @@
 .section-five-wrapper {
     background-color: gray;
+    border: .3125rem solid rgb(78, 70, 70);
+    border-radius: .625rem;
+}
+
+.five {
+    text-align: center;
+    color: black;
 }
